# Physika_BUAA

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Physika_Src/: CMakeLists.txt
Physika_Src/Physika_Cloud/: CMakeLists.txt
Physika_Src/Physika_Cloud/Cloud_Dependency/: CMakeLists.txt
Physika_Src/Physika_Cloud/Cloud_Dependency/SDFGen/: CMakeLists.txt  array1.h  array2.h  array3.h  config.h.in  main.cpp  makelevelset3.cpp  makelevelset3.h  sdfGen.cpp  sdfGen.h  vec.h
Physika_Src/Physika_Cloud/Cloud_Dependency/trimesh2/: CMakeLists.txt  COPYING  Makedefs.Darwin  Makedefs.Darwin64  Makedefs.Linux  Makedefs.Linux64  Makedefs.Win32  Makefile  Makerules  README
Physika_Src/Physika_Cloud/Cloud_Dependency/trimesh2/bin.Linux64/: mesh_align
Physika_Src/Physika_Cloud/Cloud_Dependency/trimesh2/gluit/: Makefile  freeglut_config.h  freeglut_cursor.c  freeglut_font.c  freeglut_font_data.c  freeglut_gamemode.c  freeglut_init.c  freeglut_input_devices.c  freeglut_internal.h  freeglut_main.c  freeglut_spaceball.c  freeglut_state.c  freeglut_structure.c  freeglut_window.c  glui.cc  glui_add_controls.cc  glui_algebra3.cc  glui_arcball.cc  glui_bitmaps.cc  glui_button.cc  glui_checkbox.cc  glui_column.cc  glui_control.cc  glui_edittext.cc  glui_listbox.cc  glui_mouse_iaction.cc  glui_node.cc  glui_panel.cc  glui_quaternion.cc  glui_radio.cc  glui_rollout.cc  glui_rotation.cc  glui_separator.cc  glui_slider.cc  glui_spinner.cc  glui_statictext.cc  glui_translation.cc
Physika_Src/Physika_Cloud/Cloud_Dependency/trimesh2/include/: Box.h  Color.h  GLCamera.h  GLManager.h  ICP.h  KDtree.h  TriMesh.h  TriMesh_algo.h  Vec.h  XForm.h  bsphere.h  endianutil.h  lineqn.h  mathcompat.h  mathutil.h  noise3d.h  strutil.h  timestamp.h
Physika_Src/Physika_Cloud/Cloud_Dependency/trimesh2/include/GL/: freeglut_std.h
Physika_Src/Physika_Cloud/Cloud_Dependency/trimesh2/libsrc/: GLCamera.cc  GLManager.cc  ICP.cc  KDtree.cc  Makefile  TriMesh_bounding.cc  TriMesh_connectivity.cc  TriMesh_curvature.cc  TriMesh_grid.cc  TriMesh_io.cc  TriMesh_normals.cc  TriMesh_pointareas.cc  TriMesh_stats.cc  TriMesh_tstrips.cc  conn_comps.cc  diffuse.cc  edgeflip.cc  faceflip.cc  filter.cc  make.cc  merge.cc  overlap.cc  remove.cc  reorder_verts.cc  shape_data.inc  subdiv.cc  umbrella.cc
Physika_Src/Physika_Cloud/Cloud_Dependency/trimesh2/utilsrc/: Makefile  grid_subsamp.cc  mesh_align.cc  mesh_cat.cc  mesh_cc.cc  mesh_check.cc  mesh_crunch.cc  mesh_filter.cc  mesh_hf.cc  mesh_info.cc  mesh_make.cc  mesh_shade.cc  mesh_view.cc  shaders.inc  wingetopt.c  wingetopt.h  xf.cc
Physika_Src/Physika_Cloud/Cloud_Gen_Based_Euler/: CMakeLists.txt  Cloud_gen.cpp  Cloud_gen.h  demo_test.cpp
Physika_Src/Physika_Cloud/Cloud_Mesh/: README.md
Physika_Src/Physika_Cloud/Cloud_Model/: CMakeLists.txt
Physika_Src/Physika_Cloud/Cloud_Model/Cloud_HalfMesh/: CMakeLists.txt  Cloud.cpp  Cloud.h  CloudInterior.cpp  CloudInterior.h  Image.h  Mesh.cpp  Mesh.h  Perlin.cpp  Pixel.cpp  Sun.cpp  Sun.h  Tool.cpp  Tool.h  Vector.h  global.h  image.cpp  main.cpp  sky.cpp  sky.h
Physika_Src/Physika_Cloud/Cloud_Model/Cloud_MeshDeformation/: CMakeLists.txt  Color.h  DistanceField2D.cpp  DistanceField2D.h  MeshDeform.cpp  MeshDeformation.cpp  MeshDeformation.h  Vector.h  basemesh-0001.off  perlin.cpp  perlin.h  precompiled.h  resource.h  total.h
Physika_Src/Physika_Cloud/Cloud_Render/: CMakeLists.txt  README.md  cloudSampler.cpp
Physika_Src/Physika_Cloud/Cloud_Render/Cloud_Sampler/: CMakeLists.txt  cloudSampler.cpp  cloudSampler.h
Physika_Src/Physika_Cloud/Cloud_Render/Render_Harris/: CMakeLists.txt  Camera.cpp  Camera.h  Common.h  SkyDome.cpp  SkyDome.h  VolumeClouds.cpp  main.cpp  utils_.h
Physika_Src/Physika_Cloud/Height_Field/: README.md  Sun.cpp  Sun.h
Physika_Src/Physika_Cloud/Utilities/: README.md
Physika_Src/Physika_Core/: DataTypes.h  Platform.h  Typedef.h
Physika_Src/Physika_Core/Arrays/: array-inl.h  array.h  array_Nd-inl.h  array_Nd.h  array_Nd_const_iterator-inl.h  array_Nd_const_iterator.h  array_Nd_iterator-inl.h  array_Nd_iterator.h  array_const_iterator-inl.h  array_const_iterator.h  array_iterator-inl.h  array_iterator.h  array_manager.cpp  array_manager.h
Physika_Src/Physika_Core/Utilities/: CudaRand.h  Function1Pt.cu  Function1Pt.h  Function2Pt.cu  Function2Pt.h  Functional.h  Reduction.cu  Reduction.h  cuda_helper_math.h  cuda_rand_number.cu  cuda_rand_number.h  cuda_utilities.h  cxx11_support.h  dimension_trait.h  glm_helper.h  glm_utilities.h  global_config.h  math_utilities.h  physika_assert.h  physika_exception.cpp  physika_exception.h  physika_stack_trace.cpp  physika_stack_trace.h  type_utilities.h
Physika_Src/Physika_IO/Surface_Mesh_IO/: surface_mesh_io.cpp
